[gd_scene load_steps=7 format=3 uid="uid://cxmx1dbvlr6w2"]

[ext_resource type="Script" path="res://scripts/code_editor/window_ui.gd" id="1_l7ydm"]
[ext_resource type="PackedScene" uid="uid://l1gdp5ne82s6" path="res://scenes/code_window/code_editor_ui.tscn" id="2_517op"]
[ext_resource type="Script" path="res://scripts/help_window/hint_popup.gd" id="3_mcc4n"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_14rbk"]
size = Vector2(20, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i41u0"]
bg_color = Color(0.133333, 0.133333, 0.133333, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jrhee"]

[node name="HBoxContainer" type="Control" node_paths=PackedStringArray("code_editor_ui", "hint_popup")]
layout_mode = 3
anchor_right = 0.383594
anchor_bottom = 0.888889
offset_left = 19.0
offset_top = 17.0
offset_right = 19.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
script = ExtResource("1_l7ydm")
code_editor_ui = NodePath("WindowUi/CodeEditorUI")
hint_popup = NodePath("HintPopup")
metadata/_edit_use_anchors_ = true

[node name="WindowUi" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="WindowBar" type="PanelContainer" parent="WindowUi"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="WindowUi/WindowBar"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="WindowUi/WindowBar/MarginContainer"]
layout_mode = 2

[node name="SlowIcon" type="TextureRect" parent="WindowUi/WindowBar/MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2

[node name="ExecSpeedSlider" type="HSlider" parent="WindowUi/WindowBar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
max_value = 12.0
step = 4.0
value = 4.0
tick_count = 4
ticks_on_borders = true

[node name="FastIcon" type="TextureRect" parent="WindowUi/WindowBar/MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_14rbk")

[node name="CodeEditorUI" parent="WindowUi" instance=ExtResource("2_517op")]
layout_mode = 2

[node name="ResizePanel" type="PanelContainer" parent="WindowUi"]
custom_minimum_size = Vector2(0, 11.835)
layout_mode = 2
size_flags_vertical = 8

[node name="Resize grabber" type="Panel" parent="WindowUi/ResizePanel"]
custom_minimum_size = Vector2(12.56, 0)
layout_mode = 2
size_flags_horizontal = 8

[node name="HintPopup" type="VBoxContainer" parent="." node_paths=PackedStringArray("hint_page", "hint_text")]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 3.0
offset_right = 328.0
offset_bottom = 609.0
grow_horizontal = 0
pivot_offset = Vector2(-114, 256)
mouse_filter = 2
script = ExtResource("3_mcc4n")
hint_page = NodePath("HintPage")
hint_text = NodePath("HintPage/MarginContainer/HintText")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="HintPopup"]
layout_mode = 2
size_flags_vertical = 0
size_flags_stretch_ratio = 0.17
alignment_horizontal = 0
alignment_vertical = 0

[node name="PanelContainer" type="PanelContainer" parent="HintPopup/AspectRatioContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HintPopup/AspectRatioContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HintButton" type="CheckButton" parent="HintPopup/AspectRatioContainer/PanelContainer/MarginContainer"]
layout_mode = 2
text = "Show hint"
flat = true

[node name="HintPage" type="PanelContainer" parent="HintPopup"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_i41u0")

[node name="MarginContainer" type="MarginContainer" parent="HintPopup/HintPage"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HintText" type="RichTextLabel" parent="HintPopup/HintPage/MarginContainer"]
layout_mode = 2
bbcode_enabled = true
text = "this is a hint. this is a clickable word: [url=variables]int[/url]"
fit_content = true

[node name="HSeparator" type="HSeparator" parent="HintPopup"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_jrhee")

[connection signal="gui_input" from="WindowUi/WindowBar" to="." method="_on_window_bar_gui_input"]
[connection signal="mouse_entered" from="WindowUi/WindowBar" to="." method="_on_window_bar_mouse_entered"]
[connection signal="mouse_exited" from="WindowUi/WindowBar" to="." method="_on_window_bar_mouse_exited"]
[connection signal="value_changed" from="WindowUi/WindowBar/MarginContainer/HBoxContainer/ExecSpeedSlider" to="." method="_on_exec_speed_slider_value_changed"]
[connection signal="kill_pressed" from="WindowUi/CodeEditorUI" to="." method="_on_kill_pressed"]
[connection signal="pause_pressed" from="WindowUi/CodeEditorUI" to="." method="_on_pause_pressed"]
[connection signal="run_pressed" from="WindowUi/CodeEditorUI" to="." method="_on_run_button_pressed"]
[connection signal="gui_input" from="WindowUi/ResizePanel/Resize grabber" to="." method="_on_panel_gui_input"]
[connection signal="mouse_entered" from="WindowUi/ResizePanel/Resize grabber" to="." method="_on_panel_mouse_entered"]
[connection signal="mouse_exited" from="WindowUi/ResizePanel/Resize grabber" to="." method="_on_panel_mouse_exited"]
[connection signal="toggled" from="HintPopup/AspectRatioContainer/PanelContainer/MarginContainer/HintButton" to="HintPopup" method="_on_hint_button_toggled"]
